--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* In your global CSS file */
+body {
+    background-color: #2d3748; /* Tailwind's bg-gray-800 */
+  }
+  
+
